tests/rosetta/out/Fortran/call-a-foreign-language-function.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program call_a_foreign_language_function
  implicit none
    integer :: go1
    integer :: c2
  main()
  contains
  recursive character(len=100) function strdup(s) result(res)
    character(len=100), intent(in) :: s
    res = s // ''
    return
  end function strdup
  recursive integer function main() result(res)
    go1 = 'hello C'
    c2 = strdup(go1)
    print *, c2
  end function main
end program call_a_foreign_language_function
